<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/abnormal_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="667">

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="212" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_abnormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_abnormal_no_connecting" />

            <TextView
                android:id="@+id/tv_warn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abnormal_no_connection"
                android:layout_marginTop="15dp"
                android:textColor="#888888" />

            <TextView
                android:id="@+id/tv_warn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/abnormal_check_network"
                android:textColor="#bfbfbf" />

            <TextView
                android:id="@+id/btn_warn3"
                android:layout_width="110dp"
                android:layout_height="36dp"
                android:layout_marginTop="@dimen/dp_43"
                android:background="@drawable/selector_nonet"
                android:gravity="center"
                android:text="@string/abnormal_try_refresh"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>